# GitOps-Manager

./: .gitignore  README.md  knowledge_contents.db  main.py  pyproject.toml
backend/: knowledge_contents.db  main.py
backend/data/knowledge/: branching_strategy.md  gitops_principles.md
backend/data/reports/: benghita_PropertyValuation_repository-compliance-and-activity-report_20251007T092629Z.md
backend/modules/: __init__.py  overview.md
backend/tools/: __init__.py  auto_gitops_tools.py
data/knowledge/: commit_conventions.md
frontend/: package-lock.json  package.json
frontend/pages/: index.tsx
frontend/styles/: globals.css
memory/: shared_memory.json
modules/: auto_gitops.py
tests/: test_agents.py
