[project]
name = "gitops-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.1",
    "google-genai>=1.41.0",
    "mcp>=1.16.0",
    "mistralai>=1.9.11",
    "pgvector>=0.4.1",
    "pygithub>=2.8.1",
    "sqlalchemy>=2.0.43",
    "pytest>=8.2.0",
    "psycopg>=3.2.10",
    "psycopg2>=2.9.10",
    "lancedb",
    "pandas>=2.3.3",
]
